ticket-processor-endpoint/target/classes/META-INF/fabric8/openshift/ticket-processor-endpoint-deploymentconfig-Juan Luis’s MacBook Pro.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: bfb21de4a9dcf37be8e0dd611c590932753146af
    fabric8.io/git-branch: dev
    fabric8.io/git-url: https://github.com/jlbuenosvinos/ocp-microservices-ddd.git
  labels:
    app: ticket-processor-endpoint
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat.jbuenosv.ocpmicroservicesddd.sales
  name: ticket-processor-endpoint
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: ticket-processor-endpoint
    provider: fabric8
    group: com.redhat.jbuenosv.ocpmicroservicesddd.sales
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: bfb21de4a9dcf37be8e0dd611c590932753146af
        fabric8.io/git-branch: dev
        fabric8.io/git-url: https://github.com/jlbuenosvinos/ocp-microservices-ddd.git
      labels:
        app: ticket-processor-endpoint
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.redhat.jbuenosv.ocpmicroservicesddd.sales
    spec:
      containers:
      - env:
        - name: TICKETING_TICKET_PROCESSOR_SERVICE_URI
          value: http://ticket-processor-service:8080
        - name: TICKETING_TICKET_PROCESSOR_SERVICE_URI_HOST
          value: ticket-processor-service
        - name: TICKETING_TICKET_PROCESSOR_SERVICE_URI_PORT
          value: "8080"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ticket-processor-endpoint:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: ticket-processor-endpoint:latest
    type: ImageChange
