ticket-processor-endpoint/target/classes/META-INF/fabric8/openshift/ticket-processor-endpoint-route-Juan Luis’s MacBook Pro.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    fabric8.io/git-commit: bfb21de4a9dcf37be8e0dd611c590932753146af
    fabric8.io/git-branch: dev
    fabric8.io/git-url: https://github.com/jlbuenosvinos/ocp-microservices-ddd.git
  labels:
    expose: "true"
    app: ticket-processor-endpoint
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat.jbuenosv.ocpmicroservicesddd.sales
  name: ticket-processor-endpoint
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ticket-processor-endpoint
